--- a/style.css
+++ b/style.css
@@ -677,6 +677,10 @@ FONT SIZE SYSTEM (px)
   max-width: 50%;
 }
 
+.ciclos-information hr {
+  margin-block: 2rem;
+}
+
 .ciclos-information--image {
   margin-inline: auto;
   margin-bottom: 3rem;
@@ -705,6 +709,12 @@ FONT SIZE SYSTEM (px)
   padding: 0.75rem 1.5rem;
   border-radius: 62.4375rem;
   cursor: pointer;
+  font-size: 0.875rem;
+  transition: var(--transition-default);
+}
+
+.ciclos-information--btn:hover {
+  background-color: var(--clr-dark-blue);
 }
 
 .precios {
