--- a/style.css
+++ b/style.css
@@ -362,10 +362,15 @@ FONT SIZE SYSTEM (px)
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 2.25rem auto 3rem 4rem 2.25rem auto;
+  grid-template-rows: auto auto 3rem 4rem 2.25rem auto;
   gap: 0.75rem;
 }
 
+@media (min-width: 40em) {
+  .selection {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 @media (min-width: 71.875em) {
   .selection {
     grid-template-columns: repeat(2, 1fr);
@@ -384,7 +389,7 @@ FONT SIZE SYSTEM (px)
   border-radius: 0.25rem;
   width: 15.625rem;
   justify-self: center;
-  grid-row: 1/3;
+  grid-row: 1/2;
 }
 
 @media (min-width: 71.875em) {
@@ -432,11 +437,18 @@ FONT SIZE SYSTEM (px)
 .selection-information--sinopsis {
   color: var(--clr-dark-gray);
   grid-row: 2/3;
+  grid-column: 1/-1;
 }
 
+@media (min-width: 71.875em) {
+  .selection-information--sinopsis {
+    grid-column: 2/3;
+  }
+}
 .selection-information__fechas {
   display: flex;
   flex-wrap: wrap;
+  gap: 0.25rem;
   align-items: center;
   cursor: pointer;
   border-block: 1px solid #ddd;
@@ -444,10 +456,9 @@ FONT SIZE SYSTEM (px)
   grid-column: 1/-1;
 }
 
-@media (min-width: 71.875em) {
+@media (min-width: 40em) {
   .selection-information__fechas {
-    gap: 0.75rem;
-    padding-inline: 2.25rem;
+    gap: 1.5rem;
   }
 }
 .selection-information__fechas li {
