--- a/app/sass/components/2-main.scss
+++ b/app/sass/components/2-main.scss
@@ -231,6 +231,8 @@ FONT SIZE SYSTEM (px)
       display: flex;
       grid-row: 5/6;
       grid-column: 1/-1;
+      font-size: rem(14);
+      color: var(--clr-darker-gray);
 
       @include breakpoint(large) {
         gap: rem(12);
