--- a/style.css
+++ b/style.css
@@ -499,6 +499,8 @@ FONT SIZE SYSTEM (px)
   display: flex;
   grid-row: 5/6;
   grid-column: 1/-1;
+  font-size: 0.875rem;
+  color: var(--clr-darker-gray);
 }
 
 @media (min-width: 71.875em) {
