--- a/style.css
+++ b/style.css
@@ -361,19 +361,20 @@ FONT SIZE SYSTEM (px)
 .selection {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto 3rem 4rem 2.25rem auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(7, auto);
   gap: 0.75rem;
 }
 
 @media (min-width: 40em) {
   .selection {
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto 3rem 4rem 2.25rem auto;
   }
 }
 @media (min-width: 71.875em) {
   .selection {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 3rem auto 3rem 4rem 2.25rem auto;
   }
 }
 @media (min-width: 71.875em) {
@@ -383,32 +384,49 @@ FONT SIZE SYSTEM (px)
 }
 .selection-movie--poster {
   border-radius: 0.25rem;
-  width: 15.625rem;
+  max-width: 15.625rem;
   justify-self: center;
   grid-row: 1/2;
 }
 
+@media (min-width: 40em) {
+  .selection-movie--poster {
+    grid-row: 1/2;
+  }
+}
 @media (min-width: 71.875em) {
   .selection-movie--poster {
-    width: 25rem;
     grid-row: 1/3;
+    max-width: 25rem;
   }
 }
 .selection-information--title {
   text-transform: capitalize;
-  grid-row: 1/2;
+  grid-row: 2/3;
+  grid-column: 1/-1;
 }
 
+@media (min-width: 40em) {
+  .selection-information--title {
+    grid-row: 1/2;
+    grid-column: 2/3;
+  }
+}
 .selection-information__container {
   display: flex;
   justify-content: space-evenly;
   gap: 0.5rem;
   border-top: 1px solid #ddd;
   padding-block: 0.5rem;
-  grid-row: 3/4;
+  grid-row: 4/5;
   grid-column: 1/-1;
 }
 
+@media (min-width: 40em) {
+  .selection-information__container {
+    grid-row: 3/4;
+  }
+}
 .info-container {
   display: flex;
   flex-direction: column;
@@ -432,10 +450,17 @@ FONT SIZE SYSTEM (px)
 
 .selection-information--sinopsis {
   color: var(--clr-dark-gray);
-  grid-row: 2/3;
+  text-align: justify;
+  grid-row: 3/4;
   grid-column: 1/-1;
 }
 
+@media (min-width: 40em) {
+  .selection-information--sinopsis {
+    grid-row: 2/3;
+    grid-column: 1/-1;
+  }
+}
 @media (min-width: 71.875em) {
   .selection-information--sinopsis {
     grid-column: 2/3;
@@ -445,16 +470,17 @@ FONT SIZE SYSTEM (px)
   display: flex;
   flex-wrap: wrap;
   gap: 0.25rem;
+  padding-block: 0.75rem;
   align-items: center;
   cursor: pointer;
   border-block: 1px solid #ddd;
-  grid-row: 4/5;
+  grid-row: 5/6;
   grid-column: 1/-1;
 }
 
 @media (min-width: 40em) {
   .selection-information__fechas {
-    gap: 1.5rem;
+    grid-row: 4/5;
   }
 }
 .selection-information__fechas li {
@@ -493,15 +519,17 @@ FONT SIZE SYSTEM (px)
 
 .selection-information__horarios {
   display: flex;
-  grid-row: 5/6;
+  grid-row: 6/7;
   grid-column: 1/-1;
   font-size: 0.875rem;
   color: var(--clr-darker-gray);
+  height: 2.25rem;
 }
 
-@media (min-width: 71.875em) {
+@media (min-width: 40em) {
   .selection-information__horarios {
     gap: 0.75rem;
+    grid-row: 5/6;
   }
 }
 .selection-information__horarios li {
@@ -510,7 +538,6 @@ FONT SIZE SYSTEM (px)
   height: 100%;
   padding-inline: 3rem;
   border-radius: 62.4375rem;
-  border: 1px solid var(--clr-light-blue);
   transition: var(--transition-default);
   display: flex;
   align-items: center;
@@ -518,7 +545,7 @@ FONT SIZE SYSTEM (px)
 }
 
 .selection-information__horarios li:hover {
-  background-color: var(--clr-light-blue);
+  background-color: red;
 }
 
 .selection-information__horarios li.active {
@@ -532,11 +559,18 @@ FONT SIZE SYSTEM (px)
   justify-content: space-between;
   font-size: 0.875rem;
   text-align: center;
+  border-top: 1px solid var(--clr-lighter-gray);
+  padding-top: 0.75rem;
   cursor: pointer;
-  grid-row: 6/7;
-  grid-column: 1/-1;
+  grid-row: 7/8;
 }
 
+@media (min-width: 40em) {
+  .selection-information__btns {
+    grid-row: 6/7;
+    grid-column: 1/-1;
+  }
+}
 .selection-information--back {
   border: 1px solid var(--clr-primary-blue);
   color: var(--clr-primary-blue);
@@ -552,15 +586,16 @@ FONT SIZE SYSTEM (px)
 }
 
 .selection-information--comprar {
-  background: var(--clr-primary-blue);
+  background: var(--clr-dark-blue);
   color: var(--clr-white);
   padding: 0.75rem 0;
   width: 100%;
   border-radius: 62.4375rem;
+  transition: var(--transition-default);
 }
 
 .selection-information--comprar:hover {
-  background-color: var(--clr-dark-blue);
+  background-color: var(--clr-primary-blue);
 }
 
 /*
