--- a/app/sass/components/2-main.scss
+++ b/app/sass/components/2-main.scss
@@ -442,7 +442,10 @@ FONT SIZE SYSTEM (px)
     & hr {
       margin-block: rem(32);
     }
-    max-width: 50%;
+
+    @include breakpoint(medium) {
+      max-width: 75%;
+    }
     &--image {
       margin-inline: auto;
       margin-bottom: rem(48);
