--- a/style.css
+++ b/style.css
@@ -717,14 +717,15 @@ FONT SIZE SYSTEM (px)
     width: 100%;
   }
 }
-.ciclos-information {
-  max-width: 50%;
-}
-
 .ciclos-information hr {
   margin-block: 2rem;
 }
 
+@media (min-width: 40em) {
+  .ciclos-information {
+    max-width: 75%;
+  }
+}
 .ciclos-information--image {
   margin-inline: auto;
   margin-bottom: 3rem;
