fixed hover over times color

--- a/app/sass/components/2-main.scss
+++ b/app/sass/components/2-main.scss
@@ -269,7 +269,7 @@ FONT SIZE SYSTEM (px)
         justify-content: center;
 
         &:hover {
-          background-color: red;
+          background-color: var(--clr-very-light-blue);
         }
 
         &.active {
