--- a/style.css
+++ b/style.css
@@ -467,6 +467,7 @@ FONT SIZE SYSTEM (px)
   }
 }
 .selection-information__fechas {
+  user-select: none;
   display: flex;
   flex-wrap: wrap;
   gap: 1.25rem;
@@ -519,6 +520,7 @@ FONT SIZE SYSTEM (px)
 }
 
 .selection-information__horarios {
+  user-select: none;
   display: flex;
   grid-row: 6/7;
   grid-column: 1/-1;
@@ -557,6 +559,7 @@ FONT SIZE SYSTEM (px)
 }
 
 .selection-information__btns {
+  user-select: none;
   display: flex;
   gap: 0.75rem;
   justify-content: space-between;
