--- a/app/sass/components/2-main.scss
+++ b/app/sass/components/2-main.scss
@@ -194,7 +194,7 @@ FONT SIZE SYSTEM (px)
       user-select: none;
       display: flex;
       flex-wrap: wrap;
-      gap: rem(20);
+      gap: rem(16);
       padding-block: rem(12);
       margin-bottom: rem(-6);
 
@@ -420,7 +420,7 @@ FONT SIZE SYSTEM (px)
     align-items: center;
     gap: rem(10);
 
-    @include breakpoint(xlarge) {
+    @include breakpoint(medium) {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       justify-items: center;
