--- a/app/sass/components/2-main.scss
+++ b/app/sass/components/2-main.scss
@@ -198,6 +198,7 @@ FONT SIZE SYSTEM (px)
       user-select: none;
       display: flex;
       flex-wrap: wrap;
+      justify-content: space-evenly;
       gap: rem(16);
       padding-block: rem(12);
       margin-bottom: rem(-6);
