--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ FONT SIZE SYSTEM (px)
 */
 body {
   background: var(--clr-background);
-  padding-bottom: 42px;
 }
 
 h1 {
@@ -195,12 +194,12 @@ FONT SIZE SYSTEM (px)
   padding: 1.5rem 0;
 }
 
-/* @media (min-width: 40em) {
+@media (min-width: 40em) {
   .header {
     justify-content: space-between;
     padding: 4vh 10%;
   }
-} */
+}
 .header-container {
   display: block;
 }
@@ -349,8 +348,7 @@ FONT SIZE SYSTEM (px)
   cursor: pointer;
   aspect-ratio: 2/3;
   border-radius: 0.25rem;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px,
-    rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
 }
 
 /*
@@ -387,10 +385,6 @@ FONT SIZE SYSTEM (px)
 @media (min-width: 71.875em) {
   .selection-container {
     max-width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80vh; /* Ajusta la altura de acuerdo a tus necesidades */
   }
 }
 .selection-movie--poster {
@@ -433,11 +427,6 @@ FONT SIZE SYSTEM (px)
   grid-column: 1/-1;
 }
 
-.selection-information__container--director,
-.selection-information__container--duration,
-.selection-information__container--genre {
-  text-align: center;
-}
 @media (min-width: 40em) {
   .selection-information__container {
     grid-row: 3/4;
@@ -485,11 +474,11 @@ FONT SIZE SYSTEM (px)
 .selection-information__fechas {
   user-select: none;
   display: flex;
-  justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 1rem;
   padding-block: 0.75rem;
   margin-bottom: -0.375rem;
+  justify-content: space-evenly;
   align-items: center;
   cursor: pointer;
   border-block: 1px solid #ddd;
@@ -500,6 +489,7 @@ FONT SIZE SYSTEM (px)
 @media (min-width: 40em) {
   .selection-information__fechas {
     grid-row: 4/5;
+    justify-content: flex-start;
   }
 }
 .selection-information__fechas li {
@@ -544,12 +534,14 @@ FONT SIZE SYSTEM (px)
   font-size: 0.875rem;
   color: var(--clr-darker-gray);
   height: 2.25rem;
+  gap: 0.75rem;
+  justify-content: space-evenly;
 }
 
 @media (min-width: 40em) {
   .selection-information__horarios {
-    gap: 0.75rem;
     grid-row: 5/6;
+    justify-content: flex-start;
   }
 }
 .selection-information__horarios li {
@@ -899,8 +891,7 @@ FONT SIZE SYSTEM (px)
   color: var(--clr-black-blue);
 }
 
-.navbar__item:link,
-.navbar__item:visited {
+.navbar__item:link, .navbar__item:visited {
   color: var(--clr-black-blue);
   text-decoration: none;
 }
